// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/router- un Auth -ee render un auth route data snap 1`] = `
[
  {
    "element": <div>
      /login
    </div>,
    "key": undefined,
    "path": "/login",
  },
  {
    "element": <div>
      /user/bind
    </div>,
    "key": undefined,
    "path": "/user/bind",
  },
  {
    "element": <div>
      *
    </div>,
    "key": undefined,
    "path": "*",
  },
]
`;

exports[`base/router- un Auth -ee should render BindUser 1`] = `
<body>
  <div>
    <div>
      /user/bind
    </div>
  </div>
</body>
`;

exports[`base/router- un Auth -ee should render login 1`] = `
<body>
  <div>
    <div>
      /login
    </div>
  </div>
</body>
`;
